<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoaViagem</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="erro_autenticacao">Login ou senha incorretos.</string>
    <string name="entrar">Entrar</string>
    <string name="novo_gasto">Novo gasto.</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="destino">Destino:</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="tipo_da_viagem">Tipo de viagem</string>
    <string name="data_da_saida">Data da ida.</string>
    <string name="data_da_chegada">Data da volta.</string>
    <string name="selecione">selecionar</string>
    <string name="orcamento">Orçamento/Valor máximo que pretendo gastar </string>
    <string name="quantidade_de_pessoas">Número de pessoas</string>
    <string name="salvar">Registrar</string>
    <string name="valor">Valor:</string>
    <string name="data">Data:</string>
    <string name="descricao">Descrição:</string>
    <string name="local">Local:</string>
    <string name="gastei">Gastei</string>
    <string name="categoria">Categoria:</string>
    <string name="open_drawer">abrir navegação</string>
    <string name="close_drawer">fechar navegação</string>
    <string name="sair">Sair</string>
    <string name="remover">remover</string>
    <string name="editar">Editar</string>
    <string name="registrar_nvGasto">Registrar novo gasto</string>
    <string name="visualizarGastos">Visualizar gastos</string>
    <string name="removerViagem">Remover viagem</string>
    <string name="gastos_realizados">Gastos realizados</string>
    <string name="opcoes">Opções</string>
    <string name="confirmacao_exclusao_viagem">Você deseja mesmo excluir?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="preferencias">Preferencias</string>
    <string name="modo_viagem_ativado">Determina a viagem ativa com base na data atual</string>
    <string name="modo_viagem">Modo viagem</string>
    <string name="informe_valor_limite">Informe o limite (em %)</string>
    <string name="valor_limite_sumario">Notifica quando os gastos ultrapassam o percentual definido</string>
    <string name="valor_limite">Valor limite</string>
    <string name="manter_conectado">Manter conectado</string>
    <string name="registtro_salvo">viagem registrada.</string>
    <string name="erro_salvar">falha ao registrar.</string>
    <string name="welcome_text">Olá, utilize o menu à esquerda para cadastrar uma nova viagem, ou gerenciar os gastos de alguma existente.</string>

    <string-array name="opcoes_categoria">
        <item>Alimentação</item>
        <item>Entretenimento</item>
        <item>Compras</item>
        <item>Hospedagem</item>
        <item>Outro</item>
    </string-array>

    <string-array name="opcoes_dashboard">
        <item>Novo gasto</item>
        <item>Nova viagem</item>
        <item>Minhas viagens</item>
        <item>Configurações</item>
    </string-array>

    <string-array name="imagens_dashboard">
        <item>R.drawable.img_novogasto</item>
        <item>R.drawable.img_novaviagem</item>
        <item>R.drawable.img_minhasviagens</item>
        <item>R.drawable.img_configuracoes</item>
    </string-array>
</resources>
