<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <LinearLayout
            android:background="#015488"
            android:orientation="vertical" ></LinearLayout>

        <TextView android:text="@string/destino" />
        <EditText

            android:id="@+id/destino_nvViagem"
            android:inputType="text" >
        </EditText>

        <TextView android:text="@string/tipo_da_viagem" />
        <RadioGroup
            android:id="@+id/tipoViagem"
            android:orientation="horizontal" >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lazer"
                android:checked="true"
                android:text="@string/lazer" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/negocios"
                android:layout_marginLeft="30dp"
                android:text="@string/negocios" />
        </RadioGroup>

        <TableRow>
            <TextView

                android:layout_gravity="center"
                android:text="@string/data_da_saida"
                />

            <TextView
                android:layout_gravity="center"
                android:text="@string/data_da_chegada" />
        </TableRow>

        <TableRow>
        <Button
            android:id="@+id/btDataSaida"
            android:text="@string/selecione" />

        <Button
            android:id="@+id/btDataChegada"
            android:text="@string/selecione" />
    </TableRow>

        <TextView android:text="@string/orcamento" />
        <EditText android:id="@+id/orcamento"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"/>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/quantidade_de_pessoas" />
            <EditText
                android:id="@+id/quantidadePessoas"
                android:inputType="number" />
        </TableRow>
        <Button
            android:onClick="salvarViagem"
            android:text="@string/salvar"
            android:id="@+id/btSalvarViagem" />

        </TableLayout>
</ScrollView>