<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="20dp">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/data"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecione" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"

            android:textSize="15sp"
            android:textStyle="bold"/>
        <Spinner
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:id="@+id/spinnerCategoria"
            android:focusable="false"
            android:spinnerMode="dropdown"
            android:prompt="@string/categoria"
            />

        <TextView android:text="@string/valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <EditText
                android:id="@+id/etValor"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="0.0"
                />


            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:textSize="15sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/etDescricao"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="o que você comprou?  "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/etLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <Button
                android:id="@+id/btSalvarGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar" />


        </LinearLayout>

</ScrollView>